# sfml-game

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/Source/: ImGuiSFMLBackend.cpp  ImGuiSFMLBackend.hpp  JSONManager.cpp  JSONManager.hpp  WindowManager.cpp  WindowManager.hpp
Main/: CMakeLists.txt
Main/Source/: Application.cpp  Application.hpp  Components.hpp  GUIPanel.cpp  GUIPanel.hpp  IRectangleCommand.hpp  IRectangleStorage.hpp  ImGuiSfmlBackend.cpp  ImGuiSfmlBackend.hpp  JSONRectangleStorage.cpp  JSONRectangleStorage.hpp  Main.cpp  OldRectanglesManager.cpp  OldRectanglesManager.hpp  RandomizerAPI.cpp  RandomizerAPI.hpp  RectangleAngleGenerator.cpp  RectangleAngleGenerator.hpp  RectangleColorGenerator.cpp  RectangleColorGenerator.hpp  RectangleCommands.cpp  RectangleCommands.hpp  RectangleCommandsHandler.hpp  RectangleData.hpp  RectangleGenerator.cpp  RectangleGenerator.hpp  RectangleManager.cpp  RectangleManager.hpp  RectanglePositionGenerator.cpp  RectanglePositionGenerator.hpp  RectangleRenderer.cpp  RectangleRenderer.hpp  RectangleRotationGenerator.cpp  RectangleRotationGenerator.hpp  RectangleSizeGenerator.cpp  RectangleSizeGenerator.hpp  Rectangles.cpp  Rectangles.hpp  RectanglesManager.cpp  RectanglesManager.hpp  (+2 more)
Random/: CMakeLists.txt
Random/Source/: IRandom.hpp  Random.cpp  Random.hpp  RandomAPI.cpp  RandomAPI.hpp  RandomByte.cpp  RandomByte.hpp  RandomFNormal.cpp  RandomFNormal.hpp
React/: CMakeLists.txt
React/Source/: Event.hpp
